@@ -1,5 +1,10 @@
 2010-01-20  Robert Millan  <rmh.grub@aybabtu.com>
 
+	* util/grub.d/10_linux.in (linux_entry): Set gfxpayload=keep when it
+	can be reliably determined to be supported.
+
+2010-01-20  Robert Millan  <rmh.grub@aybabtu.com>
+
 	* loader/i386/linux.c (grub_cmd_linux): If `vga=' was used, write down
 	that VESA is supported.
 	(grub_linux_boot): Use generic framebuffer unless VESA is known to be
